[package]
edition = "2021"
name = "webpack-hash-cache-napi"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.0.3", default-features = false, features = ["napi4"] }
napi-derive = "2.0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.5.1"

[build-dependencies]
napi-build = "1.2.1"

[profile.release]
lto = true
