[package]
name = "hash-cache-rs"
version = "0.1.0"
authors = ["cfruit <cfruit@cargurus.com>"]
license = "MIT"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "hash_cache_rs"
crate-type = ["cdylib"]

[dependencies.neon]
version = "0.9.1"
default-features = false
features = ["napi-4"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.5.1"
neon-serde3 = { git = "https://github.com/colinfruit/neon-serde", branch = "master" }
